1、增加 Composer 測試

--- a/3.4/practice/work/composer.json
+++ b/3.4/practice/work/composer.json
@@ -2,5 +2,10 @@
     "require": {
         "twig/twig": "^2.16",
         "phalcon/incubator": "^3.4"
+    },
+    "autoload": {
+        "psr-4": {
+            "Common\\": "Common/"
+        }
     }
 }
