--- a/3.4/practice/work/composer.json
+++ b/3.4/practice/work/composer.json
@@ -5,7 +5,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Common\\": "Common/"
+            "Common\\": "Common/",
+            "Tools\\": "Tools/"
         }
     }
 }
