1、增加預設 PHP 平台版本

--- a/3.4/practice/work/composer.json
+++ b/3.4/practice/work/composer.json
@@ -1,4 +1,9 @@
 {
+    "config": {
+        "platform": {
+            "php": "7.1"
+        }
+    },
     "require": {
         "twig/twig": "^2.16",
         "phalcon/incubator": "^3.4"
