--- a/3.4/practice/work/composer.json
+++ b/3.4/practice/work/composer.json
@@ -11,7 +11,8 @@
     "autoload": {
         "psr-4": {
             "Common\\": "Common/",
-            "Tools\\": "Tools/"
+            "Tools\\": "Tools/",
+            "Utils\\": "Utils/"
         }
     }
 }
